syntax = "proto3";

package keeper_user_v1;

option go_package = "github.com/DenisKhanov/PrivateKeeper/pkg/keeper_user_v1;KeeperUserV1";

service KeeperUserV1 {
    rpc GetVersion (GetVersionRequest) returns (GetVersionResponse);
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
    rpc SignIn (SignInRequest) returns (SignInResponse);
}

message GetVersionRequest {
}

message GetVersionResponse {
    string version = 1;
    string build_date = 2;
}

message SignUpRequest {
    string name = 1;
    string email = 2;
    string login = 3;
    string password = 4;
}

message SignUpResponse {
}

message SignInRequest {
    string login = 1;
    string password = 2;
}

message SignInResponse {
}
